--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
       </div>
       <div class="container">
         <div class="row">
-            <div class="col-sm-3 col-md-6 col-lg-4">
-    <img src="C:\Users\Regina\Desktop\Homework folder\Bootstrap-Portfolio\Bootstrap-Portfolio\images\regina.jpg" class="auth-image"
+            <div class="col-sm-9 col-md-6 col-lg-3">
+    <img src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/regina.jpg?raw=true" class="auth-image"
       alt="Regina Mireau"style="width:200px;height:200px;">
-    </div>
+        </div>
 
     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam vestibulum luctus felis, ac rhoncus nunc porttitor condimentum.
       Mauris sit amet dolor eu elit varius varius facilisis id arcu. Proin vel dui massa. Nunc rhoncus fringilla pharetra.
