--- a/portfolio.html
+++ b/portfolio.html
@@ -38,35 +38,45 @@
     <div class="jumbotron">
       <h1>Portfolio</h1>
     </div>
-  </div>
-  <div class="container">
-      <div class="col-sm-9 col-md-6 col-lg-8">
+  </div>>
+    <div class="panel panel-default">
+        <div class="panel-body">
+            <div class="row">
+                <div class="col-md-4">
     <div class="work">
-      <img src="assets/images/technics-q-c-640-480-1.jpg" alt="hangman">
+      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/hangman.jpg?raw=true" alt="hangman" width="200" height="200">
 
       <h3>Hangman</h3>
     </div>
     <div class="work">
-      <img src="assets/images/technics-q-c-640-480-2.jpg" alt="RPG Game">
+      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rpg.jpg?raw=true" alt="RPG Game" width="300" height="200">
 
       <h3>RPG Game</h3>
+
+      </div>
+      </div>
+      <div class="row">
+          <div class="col-md-4">
     </div>
     <div class="work">
-      <img src="assets/images/technics-q-c-640-480-5.jpg" alt="Trivia Game">
+      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/quiz.jpg?raw=true" alt="Trivia Game" width="400" height="200">
 
       <h3>Trivia Game</h3>
     </div>
     <div class="work">
-      <img src="assets/images/technics-q-c-640-480-7.jpg" alt="Rutgers Info Widget">
+      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rutgers.jpg?raw=true" alt="Rutgers Info Widget" width="200" height="200">
 
       <h3>Rutgers Info Widget</h3>
     </div>
     <div class="work">
-      <img src="assets/images/technics-q-c-640-480-9.jpg" alt="Rock Paper Scissors">
+      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rock%20paper%20sissors.jpg?raw=true" alt="Rock Paper Scissors" width="300" height="200">
 
       <h3>Rock Paper Scissors</h3>
     </div>
   </div>
+</div>
+</div>
+</div>
 </div>
   </section>
 
