re did the portfolio section

--- a/portfolio.html
+++ b/portfolio.html
@@ -1,4 +1,5 @@
 <!doctype html>
+<!doctype html>
 <html lang="en-us">
 
 <head>
@@ -6,7 +7,7 @@
     crossorigin="anonymous">
   <meta charset="UTF-8">
   <title>Portfolio | Regina Mireau</title>
-  <link rel="stylesheet" type="text/css" href="assets/css/reset.css">
+  <!-- <link rel="stylesheet" type="text/css" href="assets/css/reset.css"> -->
 </head>
 
 <body>
@@ -29,58 +30,122 @@
               <a href="contact.html">Contact</a>
             </li>
         </ul>
+      </nav>
+
     </div>
-    </nav>
-    </div>
+    <!-- </div> -->
   </header>
 
+  <!-- CONTAINER THAT HOLDS EVERYTHING IN THE BODY EXCEPT THE HEADER AND FOOTER -->
   <div class="container">
+    <!-- ROW THAT ALSO WRAPS EVERYTHING IN THE BODY EXCEPT THE HEADER AND FOOTER -->
+    <div class="row">
+      <!-- COLUMN THAT HOLDS ALL OF THE PORTFOLIO IMAGES AND SPANS 8 OF THE 12 GRID SPACES -->
+      <div class="col-md-8">
+        <!-- ROW THAT HOLDS THE FIRST 2 IMAGES -->
+        <div class="row">
+          <!-- COLUMN FOR THE FIRST IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
+          <div class="col-sm-6">
+            <img class="img-responsive center-block img-thumbnail" src="./images/hangman.jpg" alt="hangman">
+            <h3>Hangman</h3>
+          </div>
+          <!-- COLUMN FOR THE SECOND IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
+          <div class="col-sm-6">
+            <img class="img-responsive center-block img-thumbnail" src="./images/rpg.jpg" alt="rpg">
+            <h3>RPG Game</h3>
+          </div>
+        </div>
+        <!-- ROW THAT HOLDS THE NEXT SET OF IMAGES -->
+        <div class="row">
+          <!-- COLUMN FOR THE FIRST IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
+          <div class="col-sm-6">
+            <img class="img-responsive center-block img-thumbnail" src="./images/quiz.jpg" alt="quiz">
+            <h3>Trivia Game</h3>
+          </div>
+          <!-- COLUMN FOR THE SECOND IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
+          <div class="col-sm-6">
+            <img class="img-responsive center-block img-thumbnail" src="./images/rutgers.jpg" alt="rutgers">
+            <h3>Rutgers Info Widget</h3>
+          </div>
+        </div>
+      </div>
+      <!-- COLUMN FOR THE SIDEBAR WHICH TAKES UP THE REMAINING 4 GRID SPACES -->
+      <div class="col-md-4">
+        <div class="panel panel-default">
+          <div class="panel-heading">Regina Mireau's Portfolio</div>
+          <div class="panel-body">
+            These are some of the projects I have created recently. 
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <!-- COLUMN FOR THE FIRST IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
+        <div class="col-sm-5">
+          <img class="img-responsive center-block img-thumbnail" src="./images/hangman.jpg" alt="hangman">
+          <h3>Rock Paper Scissors</h3>
+        </div>
+        <div class="col-sm-5">
+          <img class="img-responsive center-block img-thumbnail" src="./images/hangman.jpg" alt="hangman">
+          <h3>Coming Soon!</h3>
+        </div>
+      </div>
+    </div>
+    </div>
+  </div>
+
+
+  <!-- <div class="container">
     <div class="jumbotron">
       <h1>Portfolio</h1>
     </div>
   </div>>
-    <div class="panel panel-default">
-        <div class="panel-body">
-            <div class="row">
-                <div class="col-md-4">
-    <div class="work">
-      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/hangman.jpg?raw=true" alt="hangman" width="200" height="200">
-
-      <h3>Hangman</h3>
-    </div>
-    <div class="work">
-      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rpg.jpg?raw=true" alt="RPG Game" width="300" height="200">
-
-      <h3>RPG Game</h3>
-
-      </div>
-      </div>
+  <div class="panel panel-default">
+    <div class="panel-body">
       <div class="row">
+        <div class="col-md-4">
+          <div class="work">
+            <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/hangman.jpg?raw=true"
+              alt="hangman" width="300" height="300">
+
+            <h3>Hangman</h3>
+          </div>
+          <div class="work">
+            <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rpg.jpg?raw=true"
+              alt="RPG Game" width="300" height="300">
+
+            <h3>RPG Game</h3>
+
+          </div>
+        </div>
+        <div class="row">
           <div class="col-md-4">
-    </div>
-    <div class="work">
-      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/quiz.jpg?raw=true" alt="Trivia Game" width="400" height="200">
+          </div>
+          <div class="work">
+            <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/quiz.jpg?raw=true"
+              alt="Trivia Game" width="300" height="300">
 
-      <h3>Trivia Game</h3>
-    </div>
-    <div class="work">
-      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rutgers.jpg?raw=true" alt="Rutgers Info Widget" width="200" height="200">
+            <h3>Trivia Game</h3>
+          </div>
+          <div class="work">
+            <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rutgers.jpg?raw=true"
+              alt="Rutgers Info Widget" width="300" height="300">
 
-      <h3>Rutgers Info Widget</h3>
-    </div>
-    <div class="work">
-      <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rock%20paper%20sissors.jpg?raw=true" alt="Rock Paper Scissors" width="300" height="200">
+            <h3>Rutgers Info Widget</h3>
+          </div>
+          <div class="work">
+            <img class="img-responsive" src="https://github.com/uniqueregina666/Bootstrap-Portfolio/blob/master/images/rock%20paper%20sissors.jpg?raw=true"
+              alt="Rock Paper Scissors" width="300" height="300">
 
-      <h3>Rock Paper Scissors</h3>
+            <h3>Rock Paper Scissors</h3>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
-</div>
-</div>
+  </div>
   </section>
 
-  </div>
+  </div> -->
 
   <footer>
     <div class="container">
