final submission for homework

--- a/portfolio.html
+++ b/portfolio.html
@@ -81,11 +81,15 @@
       <div class="row">
         <!-- COLUMN FOR THE FIRST IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
         <div class="col-sm-5">
-          <img class="img-responsive center-block img-thumbnail" src="./images/hangman.jpg" alt="hangman">
+          <img class="img-responsive center-block img-thumbnail" src="./images/rock paper sissors.jpg" alt="hangman">
           <h3>Rock Paper Scissors</h3>
         </div>
-        <div class="col-sm-5">
-          <img class="img-responsive center-block img-thumbnail" src="./images/hangman.jpg" alt="hangman">
+        <div class="col-sm-3">
+          <img class="img-responsive center-block img-thumbnail" src="./images/coming soon.png" alt="coming soon">
+          <h3>Coming Soon!</h3>
+        </div>
+        <div class="col-sm-3">
+          <img class="img-responsive center-block img-thumbnail" src="./images/coming soon.png" alt="coming soon">
           <h3>Coming Soon!</h3>
         </div>
       </div>
