--- a/portfolio.html
+++ b/portfolio.html
@@ -90,7 +90,7 @@
         </div>
         <div class="col-sm-3">
             <a href="https://uniqueregina666.github.io/Batman_Game/">
-          <img class="img-responsive center-block img-thumbnail" src="./images/batsym,jpg" alt="Batman Game">
+          <img class="img-responsive center-block img-thumbnail" src="./images/batsym.jpg" alt="Batman Game">
           <h3>Coming Soon!</h3>
         </div>
       </div>
