adding RPG game link

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,8 +51,10 @@
           </div>
           <!-- COLUMN FOR THE SECOND IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
           <div class="col-sm-6">
+            <a href="https://uniqueregina666.github.io/RPG/">
             <img class="img-responsive center-block img-thumbnail" src="./images/rpg.jpg" alt="rpg">
             <h3>RPG Game</h3>
+          </a>
           </div>
         </div>
         <!-- ROW THAT HOLDS THE NEXT SET OF IMAGES -->
@@ -91,7 +93,7 @@
         <div class="col-sm-3">
             <a href="https://uniqueregina666.github.io/Batman_Game/">
           <img class="img-responsive center-block img-thumbnail" src="./images/batsym.jpg" alt="Batman Game">
-          <h3>Coming Soon!</h3>
+          <h3>Batman Game</h3>
         </div>
       </div>
     </div>
