adding triva game

--- a/portfolio.html
+++ b/portfolio.html
@@ -61,8 +61,10 @@
         <div class="row">
           <!-- COLUMN FOR THE FIRST IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
           <div class="col-sm-6">
+              <a href="https://uniqueregina666.github.io/Trivia/">
             <img class="img-responsive center-block img-thumbnail" src="./images/quiz.jpg" alt="quiz">
             <h3>Trivia Game</h3>
+          </a>
           </div>
           <!-- COLUMN FOR THE SECOND IMAGE WHICH TAKES UP 6 OF THE 12 GRID SPACES -->
           <div class="col-sm-6">
